feat: add unit tests and new color palettes